; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-engine.c_create_history_query.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-engine.c_create_history_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.connection = type { i32 }
%struct.conn_query = type { i64, %struct.TYPE_4__, i32*, i64, %struct.connection*, %struct.connection*, i64 }
%struct.TYPE_4__ = type { i64 }

@verbosity = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"create_history_query(%p[%d], %p[%d]): Q=%p\0A\00", align 1
@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@history_cq_func = common dso_local global i32 0, align 4
@pending_http_queries = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"after insert_conn_query()\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_history_query(%struct.TYPE_5__* %0, %struct.connection* %1, double %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca %struct.connection*, align 8
  %6 = alloca double, align 8
  %7 = alloca %struct.conn_query*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store %struct.connection* %1, %struct.connection** %5, align 8
  store double %2, double* %6, align 8
  %8 = call %struct.conn_query* @zmalloc(i32 56)
  store %struct.conn_query* %8, %struct.conn_query** %7, align 8
  %9 = load i32, i32* @verbosity, align 4
  %10 = icmp sgt i32 %9, 1
  br i1 %10, label %11, label %23

11:                                               ; preds = %3
  %12 = load i32, i32* @stderr, align 4
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.connection*, %struct.connection** %5, align 8
  %18 = load %struct.connection*, %struct.connection** %5, align 8
  %19 = getelementptr inbounds %struct.connection, %struct.connection* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %22 = call i32 (i32, i8*, ...) @fprintf(i32 %12, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), %struct.TYPE_5__* %13, i32 %16, %struct.connection* %17, i32 %20, %struct.conn_query* %21)
  br label %23

23:                                               ; preds = %11, %3
  %24 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %25 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %24, i32 0, i32 6
  store i64 0, i64* %25, align 8
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %27 = bitcast %struct.TYPE_5__* %26 to %struct.connection*
  %28 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %29 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %28, i32 0, i32 5
  store %struct.connection* %27, %struct.connection** %29, align 8
  %30 = load %struct.connection*, %struct.connection** %5, align 8
  %31 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %32 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %31, i32 0, i32 4
  store %struct.connection* %30, %struct.connection** %32, align 8
  %33 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %34 = call i64 @get_utime(i32 %33)
  %35 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %36 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %35, i32 0, i32 0
  store i64 %34, i64* %36, align 8
  %37 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %38 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %37, i32 0, i32 3
  store i64 0, i64* %38, align 8
  %39 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %40 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %39, i32 0, i32 2
  store i32* @history_cq_func, i32** %40, align 8
  %41 = load double, double* %6, align 8
  %42 = fcmp ogt double %41, 0.000000e+00
  br i1 %42, label %43, label %50

43:                                               ; preds = %23
  %44 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %45 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = sitofp i64 %46 to double
  %48 = load double, double* %6, align 8
  %49 = fadd double %47, %48
  br label %51

50:                                               ; preds = %23
  br label %51

51:                                               ; preds = %50, %43
  %52 = phi double [ %49, %43 ], [ 0.000000e+00, %50 ]
  %53 = fptosi double %52 to i64
  %54 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %55 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %54, i32 0, i32 1
  %56 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %55, i32 0, i32 0
  store i64 %53, i64* %56, align 8
  %57 = load i32, i32* @pending_http_queries, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* @pending_http_queries, align 4
  %59 = load %struct.conn_query*, %struct.conn_query** %7, align 8
  %60 = call i32 @insert_conn_query(%struct.conn_query* %59)
  %61 = load i32, i32* @verbosity, align 4
  %62 = icmp sgt i32 %61, 1
  br i1 %62, label %63, label %66

63:                                               ; preds = %51
  %64 = load i32, i32* @stderr, align 4
  %65 = call i32 (i32, i8*, ...) @fprintf(i32 %64, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  br label %66

66:                                               ; preds = %63, %51
  ret i32 1
}

declare dso_local %struct.conn_query* @zmalloc(i32) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i64 @get_utime(i32) #1

declare dso_local i32 @insert_conn_query(%struct.conn_query*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
